# beeman-anchor-counter

./: Anchor.toml  Cargo.toml  README.md  pnpm-lock.yaml
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js/test/: _setup.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: lib.rs
scripts/: generate-clients.mjs
